--- a/docs/archetypes/azure-specialized-workload/recommendations.yaml
+++ b/docs/archetypes/azure-specialized-workload/recommendations.yaml
@@ -1,13 +1,13 @@
-- description: Your Recommendation Title Here (less than 100 characters)
+- description: あなたの推薦タイトルをここに入力してください (100 文字未満)
   aprlGuid: Generate a Unique GUID for Your Recommendation
   recommendationTypeId: null
   recommendationControl: High Availability/Business Continuity/Disaster Recovery/Scalability/Monitoring and Alerting/Service Upgrade and Retirement/Other Best Practices/Personalized/Governance
   recommendationImpact: Low/Medium/High
   recommendationResourceType: Friendly name to identity resource type
   recommendationMetadataState: Active
-  longDescription: |
-    Your Long Description Here
-    (less than 300 characters)
+  longDescription: |-
+    詳しい説明はこちら
+    (300文字以内)
   potentialBenefits: Potential Benefits of Implementing the Recommendation (less than 60 characters)
   pgVerified: false
   publishedToLearn: false
@@ -17,17 +17,16 @@
   learnMoreLink:
     - name: Learn More
       url: "Link URL"
-
-- description: Your Recommendation Title Here (less than 100 characters)
+- description: あなたの推薦タイトルをここに入力してください (100 文字未満)
   aprlGuid: Generate a Unique GUID for Your Recommendation
   recommendationTypeId: null
   recommendationControl: High Availability/Business Continuity/Disaster Recovery/Scalability/Monitoring and Alerting/Service Upgrade and Retirement/Other Best Practices/Personalized/Governance
   recommendationImpact: Low/Medium/High
   recommendationResourceType: Friendly name to identity resource type
   recommendationMetadataState: Active
-  longDescription: |
-    Your Long Description Here
-    (less than 300 characters)
+  longDescription: |-
+    詳しい説明はこちら
+    (300文字以内)
   potentialBenefits: Potential Benefits of Implementing the Recommendation (less than 60 characters)
   pgVerified: false
   publishedToLearn: false
