--- a/azure-resources/EventGrid/topics/recommendations.yaml
+++ b/azure-resources/EventGrid/topics/recommendations.yaml
@@ -33,9 +33,8 @@
   tags: null
   learnMoreLink:
     - name: Azure Event Grid delivery and retry
-      url: "https://learn.microsoft.com/en-us/azure/event-grid/delivery-and-retry#dead-letter-events"
-
-- description: Azure Event Grid topics should use Private Link Private Endpoints
+      url: "https://learn.microsoft.com/ja-jp/azure/event-grid/delivery-and-retry#dead-letter-events"
+- description: Azure Event Grid トピックでは Private Link プライベート エンドポイントを使用する必要があります
   aprlGuid: b2069f64-4741-3d4a-a71d-50c8b03f5ab7
   recommendationTypeId: bdac9c7b-b9b8-f572-0450-f161c430861c
   recommendationControl: Security
