--- a/docs/archetypes/azure-resource-type/recommendations.yaml
+++ b/docs/archetypes/azure-resource-type/recommendations.yaml
@@ -7,7 +7,7 @@
   recommendationMetadataState: Active
   longDescription: |-
     詳しい説明はこちら
-    (300文字以内)
+    （300字以内）
   potentialBenefits: Potential Benefits of Implementing the Recommendation (less than 60 characters)
   pgVerified: false
   publishedToLearn: false
@@ -25,7 +25,7 @@
   recommendationMetadataState: Active
   longDescription: |-
     詳しい説明はこちら
-    (300文字以内)
+    （300字以内）
   potentialBenefits: Potential Benefits of Implementing the Recommendation (less than 60 characters)
   pgVerified: false
   publishedToLearn: false
