--- a/azure-resources/DBforMySQL/flexibleServers/recommendations.yaml
+++ b/azure-resources/DBforMySQL/flexibleServers/recommendations.yaml
@@ -33,17 +33,16 @@
   tags: null
   learnMoreLink:
     - name: Scheduled maintenance in Azure Database for MySQL - Flexible Server
-      url: "https://learn.microsoft.com/azure/mysql/flexible-server/concepts-maintenance"
-
-- description: Configure geo redundant backup storage
+      url: "https://learn.microsoft.com/ja-jp/azure/mysql/flexible-server/concepts-maintenance"
+- description: 地理的冗長バックアップ ストレージを構成する
   aprlGuid: 5c96afc3-7d2e-46ff-a4c7-9c32850c441b
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: High
   recommendationResourceType: Microsoft.DBforMySQL/flexibleServers
   recommendationMetadataState: Active
-  longDescription: |
-    Configure GRS to ensure that your database meets its availability and durability targets even in the face of failures or disasters.
+  longDescription: |-
+    GRS を構成して、障害や災害が発生した場合でもデータベースが可用性と耐久性の目標を確実に満たすようにします。
   potentialBenefits: Recover from regional failure and/or disaster
   pgVerified: false
   publishedToLearn: false
@@ -52,17 +51,16 @@
   tags: null
   learnMoreLink:
     - name: Backup and restore in Azure Database for MySQL - Flexible Server
-      url: "https://learn.microsoft.com/en-us/azure/mysql/flexible-server/concepts-backup-restore"
-
-- description: Configure one or more read replicas
+      url: "https://learn.microsoft.com/ja-jp/azure/mysql/flexible-server/concepts-backup-restore"
+- description: 1 つ以上のリードレプリカを構成する
   aprlGuid: b49a8653-cc43-48c9-8513-a2d2e3f14dd1
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.DBforMySQL/flexibleServers
   recommendationMetadataState: Active
-  longDescription: |
-    Configure one or more read replicas to ensure that your database meets its availability and durability targets even in the face of failures or disasters.
+  longDescription: |-
+    1 つ以上のリードレプリカを構成して、障害や災害が発生した場合でもデータベースが可用性と耐久性の目標を確実に満たすようにします。
   potentialBenefits: Recover from regional failure and/or disaster
   pgVerified: false
   publishedToLearn: false
@@ -71,17 +69,16 @@
   tags: null
   learnMoreLink:
     - name: Read replicas in Azure Database for MySQL - Flexible Server
-      url: "https://learn.microsoft.com/en-us/azure/mysql/flexible-server/concepts-read-replicas"
-
-- description: Configure storage auto-grow
+      url: "https://learn.microsoft.com/ja-jp/azure/mysql/flexible-server/concepts-read-replicas"
+- description: ストレージの自動拡張を構成する
   aprlGuid: 8176a79d-8645-4e52-96be-a10fc0204fe5
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: High
   recommendationResourceType: Microsoft.DBforMySQL/flexibleServers
   recommendationMetadataState: Active
-  longDescription: |
-    Configure storage auto-grow to prevent the server from running out of storage and becoming read-only.
+  longDescription: |-
+    サーバーのストレージが不足して読み取り専用になるのを防ぐために、ストレージの自動拡張を構成します。
   potentialBenefits: Scale storage automatically to meet increasing demand
   pgVerified: false
   publishedToLearn: false
@@ -90,4 +87,4 @@
   tags: null
   learnMoreLink:
     - name: Azure Database for MySQL - Flexible Server service tiers - Storage auto grow
-      url: "https://learn.microsoft.com/en-us/azure/mysql/flexible-server/concepts-service-tiers-storage#storage-auto-grow"
+      url: "https://learn.microsoft.com/ja-jp/azure/mysql/flexible-server/concepts-service-tiers-storage#storage-auto-grow"
