--- a/azure-resources/DBforPostgreSQL/flexibleServers/recommendations.yaml
+++ b/azure-resources/DBforPostgreSQL/flexibleServers/recommendations.yaml
@@ -33,17 +33,16 @@
   tags: null
   learnMoreLink:
     - name: Scheduled maintenance in Azure Database for PostgreSQL - Flexible Server
-      url: "https://learn.microsoft.com/azure/postgresql/flexible-server/concepts-maintenance"
-
-- description: Configure geo redundant backup storage
+      url: "https://learn.microsoft.com/ja-jp/azure/postgresql/flexible-server/concepts-maintenance"
+- description: 地理的冗長バックアップ ストレージを構成する
   aprlGuid: 31f4ac4b-29cb-4588-8de2-d8fe6f13ceb3
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: High
   recommendationResourceType: Microsoft.DBforPostgreSQL/flexibleServers
   recommendationMetadataState: Active
-  longDescription: |
-    Configure GRS to ensure that your database meets its availability and durability targets even in the face of failures or disasters.
+  longDescription: |-
+    GRS を構成して、障害や災害が発生した場合でもデータベースが可用性と耐久性の目標を確実に満たすようにします。
   potentialBenefits: Recover from regional failure and/or disaster
   pgVerified: false
   publishedToLearn: false
@@ -52,17 +51,16 @@
   tags: null
   learnMoreLink:
     - name: Backup and restore in Azure Database for PostgreSQL - Flexible Server
-      url: "https://learn.microsoft.com/en-us/azure/postgresql/flexible-server/concepts-backup-restore"
-
-- description: Configure one or more read replicas
+      url: "https://learn.microsoft.com/ja-jp/azure/postgresql/flexible-server/concepts-backup-restore"
+- description: 1 つ以上のリードレプリカを構成する
   aprlGuid: 2ab85a67-26be-4ed2-a0bb-101b2513ec63
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: Medium
   recommendationResourceType: Microsoft.DBforPostgreSQL/flexibleServers
   recommendationMetadataState: Active
-  longDescription: |
-    Configure one or more read replicas to ensure that your database meets its availability and durability targets even in the face of failures or disasters.
+  longDescription: |-
+    1 つ以上のリードレプリカを構成して、障害や災害が発生した場合でもデータベースが可用性と耐久性の目標を確実に満たすようにします。
   potentialBenefits: Recover from regional failure and/or disaster
   pgVerified: false
   publishedToLearn: false
@@ -71,17 +69,16 @@
   tags: null
   learnMoreLink:
     - name: Read replicas in Azure Database for PostgreSQL - Flexible Server
-      url: "https://learn.microsoft.com/en-us/azure/postgresql/flexible-server/concepts-read-replicas"
-
-- description: Configure storage auto-grow
+      url: "https://learn.microsoft.com/ja-jp/azure/postgresql/flexible-server/concepts-read-replicas"
+- description: ストレージの自動拡張を構成する
   aprlGuid: 6293a3cc-6b4a-4c0f-9ea7-b8ae8d7dd3d5
   recommendationTypeId: null
   recommendationControl: Scalability
   recommendationImpact: High
   recommendationResourceType: Microsoft.DBforPostgreSQL/flexibleServers
   recommendationMetadataState: Active
-  longDescription: |
-    Configure storage auto-grow to prevent the server from running out of storage and becoming read-only.
+  longDescription: |-
+    サーバーのストレージが不足して読み取り専用になるのを防ぐために、ストレージの自動拡張を構成します。
   potentialBenefits: Scale storage automatically to meet increasing demand
   pgVerified: false
   publishedToLearn: false
@@ -90,4 +87,4 @@
   tags: null
   learnMoreLink:
     - name: Storage autogrow using Azure portal in Azure Database for PostgreSQL - Flexible Server
-      url: "https://learn.microsoft.com/en-us/azure/postgresql/flexible-server/how-to-auto-grow-storage-portal"
+      url: "https://learn.microsoft.com/ja-jp/azure/postgresql/flexible-server/how-to-auto-grow-storage-portal"
