--- a/azure-resources/RecoveryServices/vaults/recommendations.yaml
+++ b/azure-resources/RecoveryServices/vaults/recommendations.yaml
@@ -54,8 +54,7 @@
       url: "https://learn.microsoft.com/ja-jp/azure/backup/move-to-azure-monitor-alerts"
     - name: Classic alerts retirement announcement
       url: "https://azure.microsoft.com/updates/transition-to-builtin-azure-monitor-alerts-for-recovery-services-vaults-in-azure-backup-by-31-march-2026/"
-
-- description: Enable Cross Region Restore for your GRS Recovery Services Vault
+- description: GRS Recovery Services コンテナーのクロスリージョン リストアを有効にする
   aprlGuid: 1549b91f-2ea0-4d4f-ba2a-4596becbe3de
   recommendationTypeId: 9b1308f1-4c25-4347-a061-7cc5cd6a44ab
   recommendationControl: Disaster Recovery
